--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-numpy==1.18.1
-pandas==1.0.1
-dash_html_components==1.0.2
 ortools==7.5.7466
-plotly==4.5.3
 dash_core_components==1.8.1
+networkx==2.4
+numpy==1.18.1
+dash_html_components==1.0.2
+plotly==4.5.3
+matplotlib==3.2.0
+pandas==1.0.1
 geopy==1.21.0
